# pokanalysis

./: .gitattributes  .gitignore  CMakeLists.txt  Changelog  Makefile  README.md  gui.glade  make-release.sh  pokanalysis  pokanalysis.py  setup.py
.github/workflows/: web.yml
extractor/: Cargo.toml
extractor/src/: addresses.rs  entities.rs  hiddens.rs  image.rs  main.rs  maps.rs  pokedex.rs  reader.rs  sprites.rs  structures.rs  text.rs  tiling.rs  trainers.rs  wild.rs
libpokerom/: disasm.c  eputnbr.c  maps.c  pokedex.c  pokerom.c  pokerom.h  special_entities.c  sprites.c  strings.c  tiles.c  trainers.c
tests/: Makefile  refs  tests.py
utils/: callgrind.sh
www/: Changelog  index.html  index.js  style.css
